calendar.scss — fix z-index

--- a/src/blocks/calendar/calendar.scss
+++ b/src/blocks/calendar/calendar.scss
@@ -16,7 +16,7 @@
   }
 
   &__container {
-    z-index: 50;
+    z-index: 20;
     padding: rem(20);
     border: 1px solid $color-gray-25p;
     border-radius: $radius-primary;
